# bibliarius

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
bibliarius/: logging.py  main.py
bibliarius/data/: models.py  sql.py
bibliarius/routers/: books.py  crud.py  models.py
scripts/: setup_db.py
tests/: base.py  test_main.py
tests/data/: test_models.py  test_sql.py
