[tool.poetry]
name = "bibliarius"
version = "0.0.1"
description = "Reading list tracker"
authors = ["JengineTheEngine"]

[tool.poetry.dependencies]
python = "~3.9.2"
fastapi = "~0.70.1"
uvicorn = {version = "~0.16.0", extras = ["standard"]}
requests = "~2.26.0"
SQLAlchemy = {version = "~1.4.29", extras = ["mypy"]}

[tool.poetry.dev-dependencies]
black = "~21.12b0"
pylint = "~2.12.2"
mypy = "~0.930"
pytest = "~6.2.5"
pytest-cov = "~3.0.0"
types-requests = "2.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
plugins = "sqlalchemy.ext.mypy.plugin"
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pylint.messages_control]
disable = "C0114, R0903"
# https://github.com/samuelcolvin/pydantic/issues/1961#issuecomment-788752493
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = "120"

[tool.pytest.ini_options]
minversion = "6.2.5"
addopts = "--cov=bibliarius --cov-branch --cov-fail-under=90 --cov-report html --cov-report xml"
testpaths = ["tests"]
